--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,6 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # 디버깅 정보 출력
 spring.jpa.properties.hibernate.use_sql_comments=true
+
+
+#spring.graphql.schema.locations=
