변수명 변경

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,4 +26,5 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 
 
-#spring.graphql.schema.locations=
+#graphiql
+#spring.graphql.graphiql.enabled=true
