공정 유형 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,4 +27,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 
 #graphiql
-#spring.graphql.graphiql.enabled=true
+spring.graphql.graphiql.enabled=true
