--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,3 +28,4 @@ spring.jpa.properties.hibernate.use_sql_comments=true
 
 #graphiql
 spring.graphql.graphiql.enabled=true
+spring.graphql.websocket.path=/graphql
