--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 
 server.address=localhost
 server.port=8080
-server.servlet.context-path=/test
-server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.force=true
+spring.webflux.base-path=/test
+# server.servlet.context-path=/test
+# server.servlet.encoding.charset=UTF-8
+# server.servlet.encoding.force=true
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/dev?useSSL=false&characterEncoding=UTF-8&serverTimezone=UTC
 spring.datasource.username=devdba
